--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -22,3 +22,5 @@
 <meta property="twitter:url" content="https://decodedhtml.com/">
 <meta property="twitter:description" content="{{ description }}">
 <meta property="twitter:image" content="https://decodedhtml.com/images/preview.png">
+
+{{!-- favicon --}}
