--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -12,6 +12,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://decodedhtml.com/">
 <meta property="og:description" content="{{ description }}">
+<meta property="og:title" content="{{ title }}">
 <meta property="og:image" content="https://decodedhtml.com/images/preview.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -22,5 +23,5 @@
 <meta property="twitter:url" content="https://decodedhtml.com/">
 <meta property="twitter:description" content="{{ description }}">
 <meta property="twitter:image" content="https://decodedhtml.com/images/preview.png">
-
+<meta property="twitter:title" content="{{ title }}">
 {{!-- favicon --}}
