--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -9,8 +9,11 @@
 </script>
 
 {{!-- Open Graph / Facebook --}}
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://decodedhtml.com/">
+<meta property="og:type" content="article">
+<meta property="article:author" content="https://riojos.in/">
+<meta property="article:publisher" content="https://riojos.in/">
+<meta property="og:url">
+{{! <meta property="og:url" content="https://decodedhtml.com/"> }}
 <meta property="og:description" content="{{ description }}">
 <meta property="og:title" content="{{ title }}">
 <meta property="og:image" content="https://decodedhtml.com/images/preview.png">
@@ -20,7 +23,8 @@
 
 {{!-- Twitter --}}
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://decodedhtml.com/">
+{{! <meta property="twitter:url" content="https://decodedhtml.com/"> }}
+<meta property="twitter:url">
 <meta property="twitter:description" content="{{ description }}">
 <meta property="twitter:image" content="https://decodedhtml.com/images/preview.png">
 <meta property="twitter:title" content="{{ title }}">
